Fix testlib test.